# nonary

./: .gitignore  Dockerfile  Makefile  README.md  close_shift.py  compose.dev.yml  compose.local.yml  compose.prod.yml  download_example.py  get_images.py  hide_camel_case_properties.py  import_default_values.py  pyproject.toml  start.django.sh  start.gunicorn.sh  test_new_prices.py
app_filter/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
app_filter/migrations/: 0001_initial.py  0002_alter_categoryfilter_category.py  (+1 more)
auth_user/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
chat/: consumers.py  models.py  serializers.py  urls.py  views.py
contact/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
core/: asgi.py  settings.py  urls.py
location/: admin.py  apps.py  filters.py  models.py  serializers.py  urls.py  views.py
main_page/: admin.py  models.py  serializers.py  urls.py  views.py
nginx/: nginx.conf
notification/: admin.py  apps.py  models.py
order/: admin.py  apps.py  filters.py  models.py  serializers.py  signals.py  urls.py  views.py
promo/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
shop/: admin.py  apps.py  filters.py  forms.py  models.py  serializers.py  urls.py  views.py
utils/: aggregations.py  choices.py  crud.py  current_site.py  custom_logging.py  email.py  manual_parameters.py  models.py  monkey_patching.py  parsers.py  querysets.py  serializers.py  slugify.py  statics.py  subqueries.py  tokens.py  utils.py  viewsets.py
(+199 files in other folders)
